added user details link to the other pages

--- a/src/main/webapp/WEB-INF/views/createCemetery.html
+++ b/src/main/webapp/WEB-INF/views/createCemetery.html
@@ -19,6 +19,7 @@
                     <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user" id="user">Login</a></li>
                     <li><a href = "/CemeteryListingsWebApp/" class="logout" id="logout">Logout</a>
+                    <li><a href = "/CemeteryListingsWebApp/api/subscriber/subscriberDetails">User Details</a>
                 </ul>   
             </div>
             <div class="dummyHeader"></div>
