--- a/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
+++ b/src/main/webapp/WEB-INF/views/createUnpublishedListing.html
@@ -9,6 +9,7 @@
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
         <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/plugins/cookies-plugin/jquery.cookie.js"></script>
         <link rel="icon"  type="image/png"  href="/CemeteryListingsWebApp/resources/images/favicon.ico">
+        
 
         <link rel="stylesheet" href="/CemeteryListingsWebApp/resources/js/jquery-ui.css">
         <script src="/CemeteryListingsWebApp/resources/js/jquery-1.10.2.js"></script>
@@ -42,6 +43,7 @@
                     <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user" id="user">Login</a></li>
                     <li><a href = "/CemeteryListingsWebApp/" class="logout" id="logout">Logout</a>
+                    <li><a href = "/CemeteryListingsWebApp/api/subscriber/subscriberDetails">User Details</a>
                 </ul>   
 
         </div>
