--- a/src/main/webapp/WEB-INF/views/adminApprovedListingsDetails.html
+++ b/src/main/webapp/WEB-INF/views/adminApprovedListingsDetails.html
@@ -15,12 +15,9 @@
     <div class="pageHeader">
         <a href="/CemeteryListingsWebApp/" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList"  style="width : 100%">
-                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user" id="user">Login</a></li>
-                    <li><a href = "/CemeteryListingsWebApp/" class="logout" id="logout">Logout</a>
+                   <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/newcemetery">Create New Cemetery</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/publishedListings/adminDeceasedListings">View Approved Listings</a></li>
                 </ul>     
             </div>
             <div class="dummyHeader"></div>
@@ -73,7 +70,7 @@
                              
             
             var ID = localStorage.publishedListingsID;
-            var login = localStorage.username;
+            var login = localStorage.adminID;
             var selectedCemeteryID = localStorage.selectedCemeteryID;
 
             if($('.user') != null)
@@ -87,7 +84,7 @@
             }
             $('#logout').click(function()
             {
-                localStorage.username = "";
+                localStorage.adminID = "";
             });
                  
             var size = 0;
