--- a/src/main/webapp/WEB-INF/views/adminLogin.html
+++ b/src/main/webapp/WEB-INF/views/adminLogin.html
@@ -16,10 +16,7 @@
     <div class="pageHeader">
         <a href="/CemeteryListingsWebApp/" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList" style="width : 100%">
-                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
+                    
                 </ul>   
             </div>
             <div class="dummyHeader"></div>
@@ -47,11 +44,11 @@
      <!--<script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script> -->
         
         <script type="text/javascript">
-        	console.log('hi');
+        	//console.log('hi');
                  $('#logout').click(function(){
-                    localStorage.username = "";
+                    localStorage.adminID = "";
                 });
-                var login = localStorage.username;
+                var login = localStorage.adminID;
 
                 if($('.user') != null){
                     if(login == ""){
