--- a/src/main/webapp/WEB-INF/views/unpublishedDetailsPage.html
+++ b/src/main/webapp/WEB-INF/views/unpublishedDetailsPage.html
@@ -13,12 +13,9 @@
     <div class="pageHeader">
         <a href="/CemeteryListingsWebApp/" class="logo"><img src="/CemeteryListingsWebApp/resources/images/logo3.jpg"></a>
                 <ul class="navList" style="width : 100%">
-                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/DeceasedListing/publishedlistings">Deceased Listings</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/search/contactus">Contact Us</a></li>
-                    <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user" id="user">Login</a></li>
-                    <li><a href = "/CemeteryListingsWebApp/" class="logout" id="logout">Logout</a>
+                    <li><a href="/CemeteryListingsWebApp/api/auth/loggedIn">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/newcemetery">Create New Cemetery</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/publishedListings/adminDeceasedListings">View Approved Listings</a></li>
                 </ul>   
             </div>
             <div class="dummyHeader"></div>
@@ -63,7 +60,7 @@
           var ID = localStorage.unpublishedID;
           //console.log(ID);
           var obj = null;
-            var login = localStorage.username;
+            var login = localStorage.adminID;
 
             if($('.user') != null){
                 if(login == ""){
@@ -75,7 +72,7 @@
             }
 
              $('#logout').click(function(){
-            localStorage.username = "";
+            localStorage.adminID = "";
             });
            $('#publishListing').click(function() {
                     var names = JSON.parse(localStorage["otherNames"]);
